parser.output
   0  $accept : %entry% $end

   1  program : decls EOF

   2  decls :
   3        | decls cdecl
   4        | decls fdecl

   5  fdecl : FUNCTION ID LPAREN formals_opt RPAREN RETURNS type_label LBRACE stmt_list RBRACE

   6  formals_opt :
   7              | formal_list

   8  formal_list : type_label ID
   9              | formal_list SEMI type_label ID

  10  type_label : NUMBER
  11             | BOOL
  12             | STRING
  13             | CHAR
  14             | CHARACTER ID

  15  vdecl_list :
  16             | vdecl_list vdecl

  17  vdecl : type_label ID PERIOD
  18        | type_label TRAIT ID PERIOD
  19        | type_label ID ASSIGN expr PERIOD
  20        | type_label TRAIT ID ASSIGN expr PERIOD

  21  cdecl : CHARACTER ID LPAREN formals_opt RPAREN LBRACE vdecl_list action_list RBRACE

  22  action_list :
  23              | action_list adecl

  24  adecl : METHOD ID LPAREN formals_opt RPAREN RETURNS type_label LBRACE stmt_list RBRACE

  25  stmt_list :
  26            | stmt_list stmt

  27  stmt : expr PERIOD
  28       | vdecl
  29       | ENDWITH expr PERIOD
  30       | LBRACE stmt_list RBRACE
  31       | IF LPAREN expr RPAREN stmt
  32       | IF LPAREN expr RPAREN stmt ELSE stmt
  33       | FOR LPAREN expr_opt SEMI expr_opt SEMI expr_opt RPAREN stmt
  34       | WHILE LPAREN expr RPAREN stmt

  35  expr_opt :
  36           | expr

  37  expr : LIT_NUM
  38       | LIT_BOOL
  39       | LIT_STRING
  40       | LIT_CHAR
  41       | ID
  42       | expr PLUS expr
  43       | expr MINUS expr
  44       | expr TIMES expr
  45       | expr DIVIDE expr
  46       | expr MOD expr
  47       | expr EQ expr
  48       | expr NEQ expr
  49       | expr LT expr
  50       | expr LEQ expr
  51       | expr GT expr
  52       | expr GEQ expr
  53       | expr OR expr
  54       | expr AND expr
  55       | NOT expr
  56       | ID ASSIGN expr
  57       | ID APOST ID
  58       | ID APOST ID ASSIGN expr
  59       | ID LPAREN actuals_opt RPAREN
  60       | ID COMMA ID LPAREN actuals_opt RPAREN
  61       | LPAREN expr RPAREN

  62  actuals_opt :
  63              | actuals_list

  64  actuals_list : expr
  65               | actuals_list SEMI expr

  66  %entry% : '\001' program

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . program  (66)
	decls : .  (2)

	.  reduce 2

	program  goto 3
	decls  goto 4


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	%entry% : '\001' program .  (66)

	.  reduce 66


state 4
	program : decls . EOF  (1)
	decls : decls . cdecl  (3)
	decls : decls . fdecl  (4)

	FUNCTION  shift 5
	CHARACTER  shift 6
	EOF  shift 7
	.  error

	cdecl  goto 8
	fdecl  goto 9


state 5
	fdecl : FUNCTION . ID LPAREN formals_opt RPAREN RETURNS type_label LBRACE stmt_list RBRACE  (5)

	ID  shift 10
	.  error


state 6
	cdecl : CHARACTER . ID LPAREN formals_opt RPAREN LBRACE vdecl_list action_list RBRACE  (21)

	ID  shift 11
	.  error


state 7
	program : decls EOF .  (1)

	.  reduce 1


state 8
	decls : decls cdecl .  (3)

	.  reduce 3


state 9
	decls : decls fdecl .  (4)

	.  reduce 4


state 10
	fdecl : FUNCTION ID . LPAREN formals_opt RPAREN RETURNS type_label LBRACE stmt_list RBRACE  (5)

	LPAREN  shift 12
	.  error


state 11
	cdecl : CHARACTER ID . LPAREN formals_opt RPAREN LBRACE vdecl_list action_list RBRACE  (21)

	LPAREN  shift 13
	.  error


state 12
	fdecl : FUNCTION ID LPAREN . formals_opt RPAREN RETURNS type_label LBRACE stmt_list RBRACE  (5)
	formals_opt : .  (6)

	NUMBER  shift 14
	BOOL  shift 15
	STRING  shift 16
	CHAR  shift 17
	CHARACTER  shift 18
	RPAREN  reduce 6

	formals_opt  goto 19
	type_label  goto 20
	formal_list  goto 21


state 13
	cdecl : CHARACTER ID LPAREN . formals_opt RPAREN LBRACE vdecl_list action_list RBRACE  (21)
	formals_opt : .  (6)

	NUMBER  shift 14
	BOOL  shift 15
	STRING  shift 16
	CHAR  shift 17
	CHARACTER  shift 18
	RPAREN  reduce 6

	formals_opt  goto 22
	type_label  goto 20
	formal_list  goto 21


state 14
	type_label : NUMBER .  (10)

	.  reduce 10


state 15
	type_label : BOOL .  (11)

	.  reduce 11


state 16
	type_label : STRING .  (12)

	.  reduce 12


state 17
	type_label : CHAR .  (13)

	.  reduce 13


state 18
	type_label : CHARACTER . ID  (14)

	ID  shift 23
	.  error


state 19
	fdecl : FUNCTION ID LPAREN formals_opt . RPAREN RETURNS type_label LBRACE stmt_list RBRACE  (5)

	RPAREN  shift 24
	.  error


state 20
	formal_list : type_label . ID  (8)

	ID  shift 25
	.  error


state 21
	formals_opt : formal_list .  (7)
	formal_list : formal_list . SEMI type_label ID  (9)

	SEMI  shift 26
	RPAREN  reduce 7


state 22
	cdecl : CHARACTER ID LPAREN formals_opt . RPAREN LBRACE vdecl_list action_list RBRACE  (21)

	RPAREN  shift 27
	.  error


state 23
	type_label : CHARACTER ID .  (14)

	.  reduce 14


state 24
	fdecl : FUNCTION ID LPAREN formals_opt RPAREN . RETURNS type_label LBRACE stmt_list RBRACE  (5)

	RETURNS  shift 28
	.  error


state 25
	formal_list : type_label ID .  (8)

	.  reduce 8


state 26
	formal_list : formal_list SEMI . type_label ID  (9)

	NUMBER  shift 14
	BOOL  shift 15
	STRING  shift 16
	CHAR  shift 17
	CHARACTER  shift 18
	.  error

	type_label  goto 29


state 27
	cdecl : CHARACTER ID LPAREN formals_opt RPAREN . LBRACE vdecl_list action_list RBRACE  (21)

	LBRACE  shift 30
	.  error


state 28
	fdecl : FUNCTION ID LPAREN formals_opt RPAREN RETURNS . type_label LBRACE stmt_list RBRACE  (5)

	NUMBER  shift 14
	BOOL  shift 15
	STRING  shift 16
	CHAR  shift 17
	CHARACTER  shift 18
	.  error

	type_label  goto 31


state 29
	formal_list : formal_list SEMI type_label . ID  (9)

	ID  shift 32
	.  error


state 30
	cdecl : CHARACTER ID LPAREN formals_opt RPAREN LBRACE . vdecl_list action_list RBRACE  (21)
	vdecl_list : .  (15)

	.  reduce 15

	vdecl_list  goto 33


state 31
	fdecl : FUNCTION ID LPAREN formals_opt RPAREN RETURNS type_label . LBRACE stmt_list RBRACE  (5)

	LBRACE  shift 34
	.  error


state 32
	formal_list : formal_list SEMI type_label ID .  (9)

	.  reduce 9


state 33
	vdecl_list : vdecl_list . vdecl  (16)
	cdecl : CHARACTER ID LPAREN formals_opt RPAREN LBRACE vdecl_list . action_list RBRACE  (21)
	action_list : .  (22)

	NUMBER  shift 14
	BOOL  shift 15
	STRING  shift 16
	CHAR  shift 17
	CHARACTER  shift 18
	RBRACE  reduce 22
	METHOD  reduce 22

	type_label  goto 35
	vdecl  goto 36
	action_list  goto 37


state 34
	fdecl : FUNCTION ID LPAREN formals_opt RPAREN RETURNS type_label LBRACE . stmt_list RBRACE  (5)
	stmt_list : .  (25)

	.  reduce 25

	stmt_list  goto 38


state 35
	vdecl : type_label . ID PERIOD  (17)
	vdecl : type_label . TRAIT ID PERIOD  (18)
	vdecl : type_label . ID ASSIGN expr PERIOD  (19)
	vdecl : type_label . TRAIT ID ASSIGN expr PERIOD  (20)

	TRAIT  shift 39
	ID  shift 40
	.  error


state 36
	vdecl_list : vdecl_list vdecl .  (16)

	.  reduce 16


state 37
	cdecl : CHARACTER ID LPAREN formals_opt RPAREN LBRACE vdecl_list action_list . RBRACE  (21)
	action_list : action_list . adecl  (23)

	RBRACE  shift 41
	METHOD  shift 42
	.  error

	adecl  goto 43


state 38
	fdecl : FUNCTION ID LPAREN formals_opt RPAREN RETURNS type_label LBRACE stmt_list . RBRACE  (5)
	stmt_list : stmt_list . stmt  (26)

	LPAREN  shift 44
	LBRACE  shift 45
	RBRACE  shift 46
	NOT  shift 47
	ENDWITH  shift 48
	IF  shift 49
	FOR  shift 50
	WHILE  shift 51
	NUMBER  shift 14
	BOOL  shift 15
	STRING  shift 16
	CHAR  shift 17
	CHARACTER  shift 18
	LIT_NUM  shift 52
	LIT_BOOL  shift 53
	LIT_STRING  shift 54
	LIT_CHAR  shift 55
	ID  shift 56
	.  error

	type_label  goto 35
	vdecl  goto 57
	expr  goto 58
	stmt  goto 59


state 39
	vdecl : type_label TRAIT . ID PERIOD  (18)
	vdecl : type_label TRAIT . ID ASSIGN expr PERIOD  (20)

	ID  shift 60
	.  error


state 40
	vdecl : type_label ID . PERIOD  (17)
	vdecl : type_label ID . ASSIGN expr PERIOD  (19)

	PERIOD  shift 61
	ASSIGN  shift 62
	.  error


state 41
	cdecl : CHARACTER ID LPAREN formals_opt RPAREN LBRACE vdecl_list action_list RBRACE .  (21)

	.  reduce 21


state 42
	adecl : METHOD . ID LPAREN formals_opt RPAREN RETURNS type_label LBRACE stmt_list RBRACE  (24)

	ID  shift 63
	.  error


state 43
	action_list : action_list adecl .  (23)

	.  reduce 23


state 44
	expr : LPAREN . expr RPAREN  (61)

	LPAREN  shift 44
	NOT  shift 47
	LIT_NUM  shift 52
	LIT_BOOL  shift 53
	LIT_STRING  shift 54
	LIT_CHAR  shift 55
	ID  shift 56
	.  error

	expr  goto 64


state 45
	stmt : LBRACE . stmt_list RBRACE  (30)
	stmt_list : .  (25)

	.  reduce 25

	stmt_list  goto 65


state 46
	fdecl : FUNCTION ID LPAREN formals_opt RPAREN RETURNS type_label LBRACE stmt_list RBRACE .  (5)

	.  reduce 5


state 47
	expr : NOT . expr  (55)

	LPAREN  shift 44
	NOT  shift 47
	LIT_NUM  shift 52
	LIT_BOOL  shift 53
	LIT_STRING  shift 54
	LIT_CHAR  shift 55
	ID  shift 56
	.  error

	expr  goto 66


state 48
	stmt : ENDWITH . expr PERIOD  (29)

	LPAREN  shift 44
	NOT  shift 47
	LIT_NUM  shift 52
	LIT_BOOL  shift 53
	LIT_STRING  shift 54
	LIT_CHAR  shift 55
	ID  shift 56
	.  error

	expr  goto 67


state 49
	stmt : IF . LPAREN expr RPAREN stmt  (31)
	stmt : IF . LPAREN expr RPAREN stmt ELSE stmt  (32)

	LPAREN  shift 68
	.  error


state 50
	stmt : FOR . LPAREN expr_opt SEMI expr_opt SEMI expr_opt RPAREN stmt  (33)

	LPAREN  shift 69
	.  error


state 51
	stmt : WHILE . LPAREN expr RPAREN stmt  (34)

	LPAREN  shift 70
	.  error


state 52
	expr : LIT_NUM .  (37)

	.  reduce 37


state 53
	expr : LIT_BOOL .  (38)

	.  reduce 38


state 54
	expr : LIT_STRING .  (39)

	.  reduce 39


state 55
	expr : LIT_CHAR .  (40)

	.  reduce 40


state 56
	expr : ID .  (41)
	expr : ID . ASSIGN expr  (56)
	expr : ID . APOST ID  (57)
	expr : ID . APOST ID ASSIGN expr  (58)
	expr : ID . LPAREN actuals_opt RPAREN  (59)
	expr : ID . COMMA ID LPAREN actuals_opt RPAREN  (60)

	LPAREN  shift 71
	COMMA  shift 72
	APOST  shift 73
	ASSIGN  shift 74
	SEMI  reduce 41
	RPAREN  reduce 41
	PERIOD  reduce 41
	PLUS  reduce 41
	MINUS  reduce 41
	TIMES  reduce 41
	DIVIDE  reduce 41
	MOD  reduce 41
	EQ  reduce 41
	AND  reduce 41
	OR  reduce 41
	NEQ  reduce 41
	LT  reduce 41
	LEQ  reduce 41
	GT  reduce 41
	GEQ  reduce 41


state 57
	stmt : vdecl .  (28)

	.  reduce 28


state 58
	stmt : expr . PERIOD  (27)
	expr : expr . PLUS expr  (42)
	expr : expr . MINUS expr  (43)
	expr : expr . TIMES expr  (44)
	expr : expr . DIVIDE expr  (45)
	expr : expr . MOD expr  (46)
	expr : expr . EQ expr  (47)
	expr : expr . NEQ expr  (48)
	expr : expr . LT expr  (49)
	expr : expr . LEQ expr  (50)
	expr : expr . GT expr  (51)
	expr : expr . GEQ expr  (52)
	expr : expr . OR expr  (53)
	expr : expr . AND expr  (54)

	PERIOD  shift 75
	PLUS  shift 76
	MINUS  shift 77
	TIMES  shift 78
	DIVIDE  shift 79
	MOD  shift 80
	EQ  shift 81
	AND  shift 82
	OR  shift 83
	NEQ  shift 84
	LT  shift 85
	LEQ  shift 86
	GT  shift 87
	GEQ  shift 88
	.  error


state 59
	stmt_list : stmt_list stmt .  (26)

	.  reduce 26


state 60
	vdecl : type_label TRAIT ID . PERIOD  (18)
	vdecl : type_label TRAIT ID . ASSIGN expr PERIOD  (20)

	PERIOD  shift 89
	ASSIGN  shift 90
	.  error


state 61
	vdecl : type_label ID PERIOD .  (17)

	.  reduce 17


state 62
	vdecl : type_label ID ASSIGN . expr PERIOD  (19)

	LPAREN  shift 44
	NOT  shift 47
	LIT_NUM  shift 52
	LIT_BOOL  shift 53
	LIT_STRING  shift 54
	LIT_CHAR  shift 55
	ID  shift 56
	.  error

	expr  goto 91


state 63
	adecl : METHOD ID . LPAREN formals_opt RPAREN RETURNS type_label LBRACE stmt_list RBRACE  (24)

	LPAREN  shift 92
	.  error


state 64
	expr : expr . PLUS expr  (42)
	expr : expr . MINUS expr  (43)
	expr : expr . TIMES expr  (44)
	expr : expr . DIVIDE expr  (45)
	expr : expr . MOD expr  (46)
	expr : expr . EQ expr  (47)
	expr : expr . NEQ expr  (48)
	expr : expr . LT expr  (49)
	expr : expr . LEQ expr  (50)
	expr : expr . GT expr  (51)
	expr : expr . GEQ expr  (52)
	expr : expr . OR expr  (53)
	expr : expr . AND expr  (54)
	expr : LPAREN expr . RPAREN  (61)

	RPAREN  shift 93
	PLUS  shift 76
	MINUS  shift 77
	TIMES  shift 78
	DIVIDE  shift 79
	MOD  shift 80
	EQ  shift 81
	AND  shift 82
	OR  shift 83
	NEQ  shift 84
	LT  shift 85
	LEQ  shift 86
	GT  shift 87
	GEQ  shift 88
	.  error


state 65
	stmt_list : stmt_list . stmt  (26)
	stmt : LBRACE stmt_list . RBRACE  (30)

	LPAREN  shift 44
	LBRACE  shift 45
	RBRACE  shift 94
	NOT  shift 47
	ENDWITH  shift 48
	IF  shift 49
	FOR  shift 50
	WHILE  shift 51
	NUMBER  shift 14
	BOOL  shift 15
	STRING  shift 16
	CHAR  shift 17
	CHARACTER  shift 18
	LIT_NUM  shift 52
	LIT_BOOL  shift 53
	LIT_STRING  shift 54
	LIT_CHAR  shift 55
	ID  shift 56
	.  error

	type_label  goto 35
	vdecl  goto 57
	expr  goto 58
	stmt  goto 59


state 66
	expr : expr . PLUS expr  (42)
	expr : expr . MINUS expr  (43)
	expr : expr . TIMES expr  (44)
	expr : expr . DIVIDE expr  (45)
	expr : expr . MOD expr  (46)
	expr : expr . EQ expr  (47)
	expr : expr . NEQ expr  (48)
	expr : expr . LT expr  (49)
	expr : expr . LEQ expr  (50)
	expr : expr . GT expr  (51)
	expr : expr . GEQ expr  (52)
	expr : expr . OR expr  (53)
	expr : expr . AND expr  (54)
	expr : NOT expr .  (55)

	.  reduce 55


state 67
	stmt : ENDWITH expr . PERIOD  (29)
	expr : expr . PLUS expr  (42)
	expr : expr . MINUS expr  (43)
	expr : expr . TIMES expr  (44)
	expr : expr . DIVIDE expr  (45)
	expr : expr . MOD expr  (46)
	expr : expr . EQ expr  (47)
	expr : expr . NEQ expr  (48)
	expr : expr . LT expr  (49)
	expr : expr . LEQ expr  (50)
	expr : expr . GT expr  (51)
	expr : expr . GEQ expr  (52)
	expr : expr . OR expr  (53)
	expr : expr . AND expr  (54)

	PERIOD  shift 95
	PLUS  shift 76
	MINUS  shift 77
	TIMES  shift 78
	DIVIDE  shift 79
	MOD  shift 80
	EQ  shift 81
	AND  shift 82
	OR  shift 83
	NEQ  shift 84
	LT  shift 85
	LEQ  shift 86
	GT  shift 87
	GEQ  shift 88
	.  error


state 68
	stmt : IF LPAREN . expr RPAREN stmt  (31)
	stmt : IF LPAREN . expr RPAREN stmt ELSE stmt  (32)

	LPAREN  shift 44
	NOT  shift 47
	LIT_NUM  shift 52
	LIT_BOOL  shift 53
	LIT_STRING  shift 54
	LIT_CHAR  shift 55
	ID  shift 56
	.  error

	expr  goto 96


state 69
	stmt : FOR LPAREN . expr_opt SEMI expr_opt SEMI expr_opt RPAREN stmt  (33)
	expr_opt : .  (35)

	LPAREN  shift 44
	NOT  shift 47
	LIT_NUM  shift 52
	LIT_BOOL  shift 53
	LIT_STRING  shift 54
	LIT_CHAR  shift 55
	ID  shift 56
	SEMI  reduce 35

	expr  goto 97
	expr_opt  goto 98


state 70
	stmt : WHILE LPAREN . expr RPAREN stmt  (34)

	LPAREN  shift 44
	NOT  shift 47
	LIT_NUM  shift 52
	LIT_BOOL  shift 53
	LIT_STRING  shift 54
	LIT_CHAR  shift 55
	ID  shift 56
	.  error

	expr  goto 99


state 71
	expr : ID LPAREN . actuals_opt RPAREN  (59)
	actuals_opt : .  (62)

	LPAREN  shift 44
	NOT  shift 47
	LIT_NUM  shift 52
	LIT_BOOL  shift 53
	LIT_STRING  shift 54
	LIT_CHAR  shift 55
	ID  shift 56
	RPAREN  reduce 62

	expr  goto 100
	actuals_opt  goto 101
	actuals_list  goto 102


state 72
	expr : ID COMMA . ID LPAREN actuals_opt RPAREN  (60)

	ID  shift 103
	.  error


state 73
	expr : ID APOST . ID  (57)
	expr : ID APOST . ID ASSIGN expr  (58)

	ID  shift 104
	.  error


state 74
	expr : ID ASSIGN . expr  (56)

	LPAREN  shift 44
	NOT  shift 47
	LIT_NUM  shift 52
	LIT_BOOL  shift 53
	LIT_STRING  shift 54
	LIT_CHAR  shift 55
	ID  shift 56
	.  error

	expr  goto 105


state 75
	stmt : expr PERIOD .  (27)

	.  reduce 27


state 76
	expr : expr PLUS . expr  (42)

	LPAREN  shift 44
	NOT  shift 47
	LIT_NUM  shift 52
	LIT_BOOL  shift 53
	LIT_STRING  shift 54
	LIT_CHAR  shift 55
	ID  shift 56
	.  error

	expr  goto 106


state 77
	expr : expr MINUS . expr  (43)

	LPAREN  shift 44
	NOT  shift 47
	LIT_NUM  shift 52
	LIT_BOOL  shift 53
	LIT_STRING  shift 54
	LIT_CHAR  shift 55
	ID  shift 56
	.  error

	expr  goto 107


state 78
	expr : expr TIMES . expr  (44)

	LPAREN  shift 44
	NOT  shift 47
	LIT_NUM  shift 52
	LIT_BOOL  shift 53
	LIT_STRING  shift 54
	LIT_CHAR  shift 55
	ID  shift 56
	.  error

	expr  goto 108


state 79
	expr : expr DIVIDE . expr  (45)

	LPAREN  shift 44
	NOT  shift 47
	LIT_NUM  shift 52
	LIT_BOOL  shift 53
	LIT_STRING  shift 54
	LIT_CHAR  shift 55
	ID  shift 56
	.  error

	expr  goto 109


state 80
	expr : expr MOD . expr  (46)

	LPAREN  shift 44
	NOT  shift 47
	LIT_NUM  shift 52
	LIT_BOOL  shift 53
	LIT_STRING  shift 54
	LIT_CHAR  shift 55
	ID  shift 56
	.  error

	expr  goto 110


state 81
	expr : expr EQ . expr  (47)

	LPAREN  shift 44
	NOT  shift 47
	LIT_NUM  shift 52
	LIT_BOOL  shift 53
	LIT_STRING  shift 54
	LIT_CHAR  shift 55
	ID  shift 56
	.  error

	expr  goto 111


state 82
	expr : expr AND . expr  (54)

	LPAREN  shift 44
	NOT  shift 47
	LIT_NUM  shift 52
	LIT_BOOL  shift 53
	LIT_STRING  shift 54
	LIT_CHAR  shift 55
	ID  shift 56
	.  error

	expr  goto 112


state 83
	expr : expr OR . expr  (53)

	LPAREN  shift 44
	NOT  shift 47
	LIT_NUM  shift 52
	LIT_BOOL  shift 53
	LIT_STRING  shift 54
	LIT_CHAR  shift 55
	ID  shift 56
	.  error

	expr  goto 113


state 84
	expr : expr NEQ . expr  (48)

	LPAREN  shift 44
	NOT  shift 47
	LIT_NUM  shift 52
	LIT_BOOL  shift 53
	LIT_STRING  shift 54
	LIT_CHAR  shift 55
	ID  shift 56
	.  error

	expr  goto 114


state 85
	expr : expr LT . expr  (49)

	LPAREN  shift 44
	NOT  shift 47
	LIT_NUM  shift 52
	LIT_BOOL  shift 53
	LIT_STRING  shift 54
	LIT_CHAR  shift 55
	ID  shift 56
	.  error

	expr  goto 115


state 86
	expr : expr LEQ . expr  (50)

	LPAREN  shift 44
	NOT  shift 47
	LIT_NUM  shift 52
	LIT_BOOL  shift 53
	LIT_STRING  shift 54
	LIT_CHAR  shift 55
	ID  shift 56
	.  error

	expr  goto 116


state 87
	expr : expr GT . expr  (51)

	LPAREN  shift 44
	NOT  shift 47
	LIT_NUM  shift 52
	LIT_BOOL  shift 53
	LIT_STRING  shift 54
	LIT_CHAR  shift 55
	ID  shift 56
	.  error

	expr  goto 117


state 88
	expr : expr GEQ . expr  (52)

	LPAREN  shift 44
	NOT  shift 47
	LIT_NUM  shift 52
	LIT_BOOL  shift 53
	LIT_STRING  shift 54
	LIT_CHAR  shift 55
	ID  shift 56
	.  error

	expr  goto 118


state 89
	vdecl : type_label TRAIT ID PERIOD .  (18)

	.  reduce 18


state 90
	vdecl : type_label TRAIT ID ASSIGN . expr PERIOD  (20)

	LPAREN  shift 44
	NOT  shift 47
	LIT_NUM  shift 52
	LIT_BOOL  shift 53
	LIT_STRING  shift 54
	LIT_CHAR  shift 55
	ID  shift 56
	.  error

	expr  goto 119


state 91
	vdecl : type_label ID ASSIGN expr . PERIOD  (19)
	expr : expr . PLUS expr  (42)
	expr : expr . MINUS expr  (43)
	expr : expr . TIMES expr  (44)
	expr : expr . DIVIDE expr  (45)
	expr : expr . MOD expr  (46)
	expr : expr . EQ expr  (47)
	expr : expr . NEQ expr  (48)
	expr : expr . LT expr  (49)
	expr : expr . LEQ expr  (50)
	expr : expr . GT expr  (51)
	expr : expr . GEQ expr  (52)
	expr : expr . OR expr  (53)
	expr : expr . AND expr  (54)

	PERIOD  shift 120
	PLUS  shift 76
	MINUS  shift 77
	TIMES  shift 78
	DIVIDE  shift 79
	MOD  shift 80
	EQ  shift 81
	AND  shift 82
	OR  shift 83
	NEQ  shift 84
	LT  shift 85
	LEQ  shift 86
	GT  shift 87
	GEQ  shift 88
	.  error


state 92
	adecl : METHOD ID LPAREN . formals_opt RPAREN RETURNS type_label LBRACE stmt_list RBRACE  (24)
	formals_opt : .  (6)

	NUMBER  shift 14
	BOOL  shift 15
	STRING  shift 16
	CHAR  shift 17
	CHARACTER  shift 18
	RPAREN  reduce 6

	formals_opt  goto 121
	type_label  goto 20
	formal_list  goto 21


state 93
	expr : LPAREN expr RPAREN .  (61)

	.  reduce 61


state 94
	stmt : LBRACE stmt_list RBRACE .  (30)

	.  reduce 30


state 95
	stmt : ENDWITH expr PERIOD .  (29)

	.  reduce 29


state 96
	stmt : IF LPAREN expr . RPAREN stmt  (31)
	stmt : IF LPAREN expr . RPAREN stmt ELSE stmt  (32)
	expr : expr . PLUS expr  (42)
	expr : expr . MINUS expr  (43)
	expr : expr . TIMES expr  (44)
	expr : expr . DIVIDE expr  (45)
	expr : expr . MOD expr  (46)
	expr : expr . EQ expr  (47)
	expr : expr . NEQ expr  (48)
	expr : expr . LT expr  (49)
	expr : expr . LEQ expr  (50)
	expr : expr . GT expr  (51)
	expr : expr . GEQ expr  (52)
	expr : expr . OR expr  (53)
	expr : expr . AND expr  (54)

	RPAREN  shift 122
	PLUS  shift 76
	MINUS  shift 77
	TIMES  shift 78
	DIVIDE  shift 79
	MOD  shift 80
	EQ  shift 81
	AND  shift 82
	OR  shift 83
	NEQ  shift 84
	LT  shift 85
	LEQ  shift 86
	GT  shift 87
	GEQ  shift 88
	.  error

